# FlashAttentionOpt

./: Dockerfile  README.md  requirements.txt
.devcontainer/: devcontainer.json
baseline/: hf_gpt2.py  hf_llama.py  pyproject.toml
model/: download.py  pyproject.toml  test_model.py
src/: CMakeLists.txt  unittest.cu
src/layers/: RMSNorm.cu  RMSNorm.py  common.h
src/layers/layers.egg-info/: top_level.txt
src/layers/npy_verify/: rmsnorm.npy  rmsnorm_warp2.npy  rmsnorm_warp_opt.npy
src/my_layers/: GEMM_cutlass_default.cu  GEMM_cutlass_default.cuh  GEMM_cutlass_splitK.cu  GEMM_cutlass_splitK.cuh  RMSNorm.cu  RMSNorm.py  adaptor.cu  common.h  cutlass_common.cuh  layers.py  selfAttention.cu
src/my_layers/layers.egg-info/: PKG-INFO  SOURCES.txt
src/my_layers/npy_verify/: cu_gemm_ABt_scale.npy  cu_scaled_dot_product_attention.npy  cu_softmax_online.npy
src/tests/: test_layers.py
